[package]
name = "css-inliner-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css-inline = "0.9.0"
actix-web = {version="4.3.0", features=["rustls"]}
log = "0.4.18"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = {version="3.3.0", features=["actix_extras"]}

[target.'cfg(not(windows))'.dependencies]
openssl = {version="0.10.52", features = ["vendored"]}
